--- a/view/frontend/layout/breeze_default.xml
+++ b/view/frontend/layout/breeze_default.xml
@@ -8,16 +8,10 @@
                     <item name="default" xsi:type="array">
                         <item name="items" xsi:type="array">
                             <item name="StripeIntegration_Payments/js/stripe" xsi:type="array">
-                                <item name="path" xsi:type="string">StripeIntegration_Payments/js/stripe</item>
-
-                                <item name="enabled" xsi:type="helper" helper="Swissup\Breeze\Helper\Config::isEnabled">
-                                    <param name="path">payment/stripe_payments/active</param>
-                                </item>
-                            </item>
-
-                            <item name="stripe-register" xsi:type="array">
                                 <item name="path" xsi:type="string">Swissup_BreezeStripePayments/js/stripe-register</item>
-
+                                <item name="import" xsi:type="array">
+                                    <item name="parent" xsi:type="string">StripeIntegration_Payments/js/stripe</item>
+                                </item>
                                 <item name="enabled" xsi:type="helper" helper="Swissup\Breeze\Helper\Config::isEnabled">
                                     <param name="path">payment/stripe_payments/active</param>
                                 </item>
