--- a/view/frontend/layout/breeze_default.xml
+++ b/view/frontend/layout/breeze_default.xml
@@ -10,18 +10,28 @@
                             <item name="StripeIntegration_Payments/js/stripe" xsi:type="array">
                                 <item name="path" xsi:type="string">Swissup_BreezeStripePayments/js/stripe-register</item>
                                 <item name="import" xsi:type="array">
+                                    <item name="stripejs" xsi:type="string">https://js.stripe.com/v3/</item>
                                     <item name="parent" xsi:type="string">StripeIntegration_Payments/js/stripe</item>
                                 </item>
                                 <item name="enabled" xsi:type="helper" helper="Swissup\Breeze\Helper\Config::isEnabled">
                                     <param name="path">payment/stripe_payments/active</param>
                                 </item>
+                                <item name="load" xsi:type="array">
+                                    <item name="onRequire" xsi:type="boolean">true</item>
+                                </item>
                             </item>
 
                             <item name="StripeIntegration_Payments/js/stripe_payments_express" xsi:type="array">
                                 <item name="path" xsi:type="string">Swissup_BreezeStripePayments/js/stripe_payments_express</item>
-
+                                <item name="import" xsi:type="array">
+                                    <item name="stripe" xsi:type="string">StripeIntegration_Payments/js/stripe</item>
+                                    <item name="parent" xsi:type="string">StripeIntegration_Payments/js/stripe_payments_express</item>
+                                </item>
                                 <item name="enabled" xsi:type="helper" helper="Swissup\Breeze\Helper\Config::isEnabled">
                                     <param name="path">payment/stripe_payments/active</param>
+                                </item>
+                                <item name="load" xsi:type="array">
+                                    <item name="onRequire" xsi:type="boolean">true</item>
                                 </item>
                             </item>
                         </item>
