--- a/view/frontend/layout/breeze_default.xml
+++ b/view/frontend/layout/breeze_default.xml
@@ -27,6 +27,9 @@
                                     <item name="stripe" xsi:type="string">StripeIntegration_Payments/js/stripe</item>
                                     <item name="parent" xsi:type="string">StripeIntegration_Payments/js/stripe_payments_express</item>
                                 </item>
+                                <item name="enabled" xsi:type="helper" helper="Swissup\Breeze\Helper\Config::isEnabled">
+                                    <param name="path">payment/stripe_payments/express</param>
+                                </item>
                                 <item name="load" xsi:type="array">
                                     <item name="onRequire" xsi:type="boolean">true</item>
                                 </item>
@@ -42,6 +45,9 @@
                                     <item name="messages" xsi:type="string">Magento_Ui/js/model/messages</item>
                                     <item name="stripe" xsi:type="string">StripeIntegration_Payments/js/stripe</item>
                                     <item name="parent" xsi:type="string">StripeIntegration_Payments/js/view/ui_components/setup_element</item>
+                                </item>
+                                <item name="enabled" xsi:type="helper" helper="Swissup\Breeze\Helper\Config::isEnabled">
+                                    <param name="path">payment/stripe_payments/active</param>
                                 </item>
                                 <item name="load" xsi:type="array">
                                     <item name="onRequire" xsi:type="boolean">true</item>
