--- a/view/frontend/layout/breeze_default.xml
+++ b/view/frontend/layout/breeze_default.xml
@@ -5,7 +5,7 @@
         <referenceBlock name="breeze.js">
             <arguments>
                 <argument name="bundles" xsi:type="array">
-                    <item name="default" xsi:type="array">
+                    <item name="dynamic" xsi:type="array">
                         <item name="items" xsi:type="array">
                             <item name="StripeIntegration_Payments/js/stripe" xsi:type="array">
                                 <item name="path" xsi:type="string">StripeIntegration_Payments/js/stripe</item>
@@ -14,9 +14,6 @@
                                 </item>
                                 <item name="enabled" xsi:type="helper" helper="Swissup\Breeze\Helper\Config::isEnabled">
                                     <param name="path">payment/stripe_payments/active</param>
-                                </item>
-                                <item name="load" xsi:type="array">
-                                    <item name="onRequire" xsi:type="boolean">true</item>
                                 </item>
                             </item>
 
@@ -31,27 +28,19 @@
                                 <item name="enabled" xsi:type="helper" helper="Swissup\Breeze\Helper\Config::isEnabled">
                                     <param name="path">payment/stripe_payments_express/global_enabled</param>
                                 </item>
-                                <item name="load" xsi:type="array">
-                                    <item name="onRequire" xsi:type="boolean">true</item>
-                                </item>
                             </item>
 
                             <item name="StripeIntegration_Payments/js/view/ui_components/setup_element" xsi:type="array">
-                                <item name="path" xsi:type="string">Swissup_BreezeStripePayments/js/ui_setup_element</item>
+                                <item name="path" xsi:type="string">StripeIntegration_Payments/js/view/ui_components/setup_element</item>
                                 <item name="import" xsi:type="array">
                                     <item name="action-add" xsi:type="string">StripeIntegration_Payments/js/action/add-payment-method</item>
                                     <item name="action-delete" xsi:type="string">StripeIntegration_Payments/js/action/delete-payment-method</item>
                                     <item name="action-list" xsi:type="string">StripeIntegration_Payments/js/action/list-payment-methods</item>
-                                    <item name="actions-register" xsi:type="string">Swissup_BreezeStripePayments/js/actions-register</item>
                                     <item name="messages" xsi:type="string">Magento_Ui/js/model/messages</item>
                                     <item name="stripe" xsi:type="string">StripeIntegration_Payments/js/stripe</item>
-                                    <item name="parent" xsi:type="string">StripeIntegration_Payments/js/view/ui_components/setup_element</item>
                                 </item>
                                 <item name="enabled" xsi:type="helper" helper="Swissup\Breeze\Helper\Config::isEnabled">
                                     <param name="path">payment/stripe_payments/active</param>
-                                </item>
-                                <item name="load" xsi:type="array">
-                                    <item name="onRequire" xsi:type="boolean">true</item>
                                 </item>
                             </item>
                         </item>
