--- a/view/frontend/web/css/breeze/_default.less
+++ b/view/frontend/web/css/breeze/_default.less
@@ -21,4 +21,23 @@
     .stripe-payments-express-minicart {
         margin: 0;
     }
+
+    .opc-block-summary.subscription-update {
+        display: block;
+        margin-bottom: @4 !important;
+    }
+    .subscription-update .payment-method-content {
+        padding-top: 0 !important;
+    }
+    .payment-method-content {
+        .plan {
+            margin-top: 8px;
+            h3 {
+                font-weight: 500;
+                font-size: @font-size__lg;
+                line-height: @line-height__lg;
+                margin: 0;
+            }
+        }
+    }
 }
