--- a/view/frontend/layout/breeze_default.xml
+++ b/view/frontend/layout/breeze_default.xml
@@ -43,6 +43,20 @@
                                     <param name="path">payment/stripe_payments/active</param>
                                 </item>
                             </item>
+
+                            <item name="StripeIntegration_Payments/js/view/checkout/cart/totals/initial_fee" xsi:type="array">
+                                <item name="path" xsi:type="string">StripeIntegration_Payments/js/view/checkout/cart/totals/initial_fee</item>
+                                <item name="import" xsi:type="array">
+                                    <item name="abstract-total" xsi:type="string">Magento_Checkout/js/view/summary/abstract-total</item>
+                                    <item name="quote" xsi:type="string">Magento_Checkout/js/model/quote</item>
+                                    <item name="price-utils" xsi:type="string">Magento_Catalog/js/price-utils</item>
+                                    <item name="totals" xsi:type="string">Magento_Checkout/js/model/totals</item>
+                                    <item name="parent" xsi:type="string">StripeIntegration_Payments/js/view/checkout/summary/initial_fee</item>
+                                </item>
+                                <item name="enabled" xsi:type="helper" helper="Swissup\Breeze\Helper\Config::isEnabled">
+                                    <param name="path">payment/stripe_payments/active</param>
+                                </item>
+                            </item>
                         </item>
                     </item>
                 </argument>
